<project xmlns="http://maven.apache.org/POM/4.0.0" 
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	
	<name>autumo-beetroot</name>
	<groupId>ch.autumo.beetroot</groupId>
	<artifactId>autumo-beetroot</artifactId>
	<version>1.3.3</version>
	<packaging>jar</packaging>

	<properties>
		<!-- Adjust to your structure -->
		<basePath>/Users/Mike/Development/git-ext</basePath>
		<nanohttpjar>${basePath}/nanohttpd/core/target/nanohttpd-2.3.4-BEETROOT.jar</nanohttpjar>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>8</release>
				</configuration>
			</plugin>
			<plugin>
			    <artifactId>maven-resources-plugin</artifactId>
			    <version>3.0.2</version>
			    <executions>
					<execution>
			            <id>copy-license</id>
			            <phase>generate-sources</phase>
			            <goals>
			                <goal>copy-resources</goal>
			            </goals>
			            <configuration>
			                <outputDirectory>${basedir}/target/classes/META-INF</outputDirectory>
			                <resources>
			                    <resource>
			                        <include>LICENSE.txt</include>
				                    <directory>${basedir}</directory>
			                    </resource>
			                </resources>
			            </configuration>
			        </execution>			    
			        <execution>
			            <id>copy-web-resource</id>
			            <phase>generate-sources</phase>
			            <goals>
			                <goal>copy-resources</goal>
			            </goals>
			            <configuration>
			                <outputDirectory>${basedir}/target/classes/web</outputDirectory>
			                <resources>
			                    <resource>
			                        <directory>web</directory>
			                    </resource>
			                </resources>
			            </configuration>
			        </execution>
					<execution>
			            <id>copy-mime-types</id>
			            <phase>generate-sources</phase>
			            <goals>
			                <goal>copy-resources</goal>
			            </goals>
			            <configuration>
			                <outputDirectory>${basedir}/target/classes/META-INF</outputDirectory>
			                <resources>
			                    <resource>
			                        <include>*.types</include>
				                    <directory>${basedir}/cfg</directory>
			                    </resource>
			                </resources>
			            </configuration>
			        </execution>			        
			        <execution>
			            <id>copy-jar-resource</id>
			            <phase>install</phase>
			            <goals>
			                <goal>copy-resources</goal>
			            </goals>
			            <configuration>
			                <outputDirectory>${basedir}/lib</outputDirectory>
			                <resources>
			                    <resource>
				                    <include>*.jar</include>
				                    <directory>${basedir}/target</directory>
								</resource>
			                </resources>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
			                <includeScope>provided</includeScope>
							<outputDirectory>${basedir}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.36</version>
		    <scope>provided</scope>
		</dependency>
	
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-slf4j-impl</artifactId>
		    <version>2.18.0</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>2.18.0</version>
		    <scope>provided</scope>
		</dependency>
		
	  	<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.18.0</version>
		    <scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>commons-cli</groupId>
		    <artifactId>commons-cli</artifactId>
		    <version>1.5.0</version>
		    <scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.11.0</version>
		    <scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.15</version>
		    <scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>commons-dbutils</groupId>
		    <artifactId>commons-dbutils</artifactId>
		    <version>2.0-SNAPSHOT</version>
		    <scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-text</artifactId>
		    <version>1.10.0</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.5.13</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.15.3</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>de.taimos</groupId>
		    <artifactId>totp</artifactId>
		    <version>1.0</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>com.google.zxing</groupId>
		    <artifactId>core</artifactId>
		    <version>3.5.0</version>
		    <scope>provided</scope>
		</dependency>
				
		<dependency>
		    <groupId>com.google.zxing</groupId>
		    <artifactId>javase</artifactId>
		    <version>3.5.0</version>
		    <scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>com.twilio.sdk</groupId>
		    <artifactId>twilio</artifactId>
		    <version>9.0.1</version>
		    <scope>provided</scope>
		</dependency>

		<dependency>
    		<groupId>com.diogonunes</groupId>
    		<artifactId>JColor</artifactId>
		    <version>5.5.1</version>
		    <scope>provided</scope>
		</dependency>

		<dependency>
		    <groupId>jakarta.activation</groupId>
		    <artifactId>jakarta.activation-api</artifactId>
		    <version>2.1.0</version>
		    <scope>compile</scope> <!-- IMPORTANT! -->
		</dependency>
		
		<dependency>
		    <groupId>jakarta.mail</groupId>
		    <artifactId>jakarta.mail-api</artifactId>
		    <version>2.1.0</version>
		    <scope>compile</scope> <!-- IMPORTANT! -->
		</dependency>

		<dependency>
    		<groupId>javax.mail</groupId>
    		<artifactId>javax.mail-api</artifactId>
    		<version>1.6.2</version>
		    <scope>compile</scope> <!-- IMPORTANT! -->
		</dependency>
		
		<dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>javax.servlet-api</artifactId>
		    <version>4.0.1</version>
		    <scope>compile</scope> <!-- IMPORTANT! -->
		</dependency>

		<!--
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>5.0.0</version>
		    <scope>compile</scope>
		</dependency>
		-->

		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <version>1.4.200</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>42.3.3</version>
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>3.0.3</version>               
		    <scope>provided</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.nanohttpd</groupId>
		    <artifactId>nanohttpd</artifactId>
		    <version>2.3.4-BEETROOT</version>
		    <scope>system</scope>
		    <systemPath>${nanohttpjar}</systemPath>
		</dependency>
				
	</dependencies>

</project>
